test/expected/explain_lb.out
explain long bool x
             ^
14: error: "long _Bool" is illegal for built-in type
